--- a/OsmAnd/res/values-nb/strings.xml
+++ b/OsmAnd/res/values-nb/strings.xml
@@ -3000,7 +3000,7 @@
     <string name="save_poi_value_exceed_length_title">Lengden på \"%s\"-verdien</string>
     <string name="avoid_pt_types_descr">Velg offentlige transporttyper å unngå for navigasjon:</string>
     <string name="avoid_pt_types">Unngå transporttyper…</string>
-    <string name="quick_action_day_night_mode">&amp;s-modus</string>
+    <string name="quick_action_day_night_mode">%s-modus</string>
     <string name="shared_string_degrees">Grader</string>
     <string name="shared_string_milliradians">Milliradianer</string>
     <string name="angular_measeurement">Vinkel-måleenheter</string>
