profile string res fix

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,14 @@
 	Thx - Hardy
 
 -->
+    <string name="edit_profile_setup_title">Setup Profile</string>
+    <string name="edit_profile_setup_subtitle">Profile keeps its own settings</string>
+    <string name="edit_profile_configure_map">Configure map</string>
+    <string name="edit_profile_setup_map_subtitle">Select default map options for profile</string>
+    <string name="edit_profile_configure_screen_title">Configure screen</string>
+    <string name="edit_profile_screen_options_subtitle">Select default screen options for profile</string>
+    <string name="edit_profile_nav_settings_title">Navigation settings</string>
+    <string name="edit_profile_nav_settings_subtitle">Select default navigation settings for profile</string>
     <string name="app_mode_ufo">UFO</string>
     <string name="release_3_4">
         • Application profiles: create a custom profile for your own needs, with a custom icon and color\n\n
@@ -3238,5 +3246,6 @@
     <string name="routing_attr_difficulty_preference_description">Prefer routes of this difficulty, although routing over harder or easier pistes is still possible if shorter.</string>
     <string name="routing_attr_freeride_policy_name">Off-piste</string>
     <string name="routing_attr_freeride_policy_description">Freerides and offpiste are unofficial routes and passages. Typically ungroomed, unmainted by the officials and not checked in the evening. Enter at own risk.</string>
+
 
 </resources>
