--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,9 +11,10 @@
 	Thx - Hardy
 
 -->
-    <string name="wake_on_voice_time_descr">Set the time for which the screen will turn on.</string>
-    <string name="wake_on_voice_sensor">Use proximity sensor</string>
-    <string name="wake_on_voice_sensor_descr">Wave your hand over the top of the screen to turn on the screen while navigating.</string>
+    <string name="turn_screen_on_router">Wake on turn</string>
+    <string name="turn_screen_on_time_descr">Set the time for which the screen will turn on.</string>
+    <string name="turn_screen_on_sensor">Use proximity sensor</string>
+    <string name="turn_screen_on_sensor_descr">Wave your hand over the top of the screen to turn on the screen while navigating.</string>
     <string name="app_profile_custom_nav_subtitle"></string>
     <string name="rate_dialog_descr">Please give us 30 seconds, share feedback and rate our work on Google Play.</string>
     <string name="button_rate">Rate</string>
