Reverted conflicting changes, shorter style desc., extra fixes

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="button_rate">Rate</string>
     <string name="shared_string_privacy_policy">Privacy Policy</string>
     <string name="help_us_make_osmand_better">Help make OsmAnd better!</string>
-    <string name="make_osmand_better_descr">Allow OsmAnd to collect and process anonymous app usage data. Your position is not collected nor stored, neither is any locations you view on the map.\n\nChange your choice any time in \'Settings\' → \'Privacy and Security\'.</string>
+    <string name="make_osmand_better_descr">Send anonymous app usage data. No positioning or viewed locations.\n\nTurn off at any time in \'Settings\' → \'Privacy and Security\'.</string>
     <string name="choose_data_to_share">Choose what data you want to share:</string>
     <string name="downloaded_maps">Maps downloaded</string>
     <string name="visited_screens">Screens visited</string>
@@ -61,10 +61,10 @@
     <string name="collected_data_descr">List of data you want to share with OsmAnd.</string>
     <string name="downloaded_maps_collect_descr">The data distinguishes map, region and country popularity.</string>
     <string name="visited_screens_collect_descr">The data distinguishes OsmAnd feature popularity.</string>
-    <string name="privacy_and_security_change_descr">By tapping \"Allow\" you agree to the %1$s</string>
+    <string name="privacy_and_security_change_descr">Tap \"Allow\" to agree to the %1$s</string>
     <string name="settings_privacy_and_security">Privacy and Security</string>
-    <string name="settings_privacy_and_security_desc">Select which data to share with OsmAnd developers</string>
-    <string name="shared_string_no_thank_you">No, thank you</string>
+    <string name="settings_privacy_and_security_desc">Pick data to share with OsmAnd developers</string>
+    <string name="shared_string_no_thank_you">No thank you</string>
     <string name="shared_string_allow">Allow</string>
     <string name="profile_name_hint">Profile name</string>
     <string name="nav_type_hint">Navigation type</string>
@@ -92,7 +92,7 @@
     <string name="profile_alert_duplicate_name_msg">A profile with this name already exists.</string>
     <string name="profile_alert_cant_delete_base">You cannot delete OsmAnd\'s base profiles</string>
     <string name="profile_alert_need_save_title">Saving</string>
-    <string name="profile_alert_need_save_msg">Save profile changes before proceeding</string>
+    <string name="profile_alert_need_save_msg">Save profile changes first</string>
     <string name="profile_alert_delete_title">Deletion</string>
     <string name="profile_alert_delete_msg">Are you sure you want to delete the %s profile?</string>
     <string name="select_base_profile_dialog_title">Select a base profile</string>
@@ -321,17 +321,17 @@
     <string name="quick_action_edit_actions">Edit actions</string>
     <string name="get_osmand_live">Get OsmAnd Live to unlock all features: Daily map updates with unlimited downloads, all paid and free plugins, Wikipedia, Wikivoyage and much more.</string>
     <string name="unirs_render_descr">Modification of the default style to increase contrast of pedestrian and bicycle roads. Uses legacy Mapnik colors.</string>
-    <string name="shared_string_bookmark">Add bookmark</string>
+    <string name="shared_string_bookmark">Bookmark</string>
     <string name="hide_full_description">Hide full description</string>
     <string name="show_full_description">Show full description</string>
-    <string name="off_road_render_descr">Suitable for use during off-road driving. Suitable for use with green satellite images as an underlay map. Key points: Reduced main road thickness, increased thickness of tracks, paths, bicycle and other routes. Based on \'Topo\' style.</string>
-    <string name="nautical_render_descr">Nautical navigation style. Key features: Buoys, lighthouses, riverways, sea lanes and marks, harbours, seamark services, depth contours.</string>
-    <string name="ski_map_render_descr">Skiing style. Key features: Renders pistes, ski-lifts and other ski features in a convenient way. Less distracting secondary map objects.</string>
-    <string name="light_rs_render_descr">Simple and contrasting style for car navigation. Gentle on the eyes in the night mode. Key features: Contour lines, contrasting orange styled roads, less distracting secondary map objects.</string>
-    <string name="topo_render_descr">Contrast style designed primarily for hiking, trekking and cycling in nature. Good readability in complex external lighting. Key features: Contrasting roads and natural objects, different types of routes, contour lines with advanced settings, more details at corresponding zoom levels than the "default" style. "Surface integrity" option allows distinguishing road surface quality. No night mode.</string>
-    <string name="mapnik_render_descr">Old \'Mapnik\'-style default rendering style. Key features: Colors are similar to \'Mapnik\' style.</string>
-    <string name="touring_view_render_descr">High detail style for touring purposes. Includes all configuration options of default style, in addition: Displays as much detail as possible, in particular all roads, paths, and other ways to travel. Clear visual distinction between all different road types, reminiscent of many touring atlases. High contrast color scheme for outdoor use, day and night mode.</string>
-    <string name="default_render_descr">General purpose style. Simplified cleaner rendering in densely populated cities. Key features: Contour lines, routes, surface quality, access restrictions, road shields, paths rendering according to SAC scale, whitewater sport features.</string>
+    <string name="off_road_render_descr">Off-road driving in \'Topo\' style, and for use with green satellite images as an underlay. Reduced main road thickness, increased thickness of tracks, paths, bicycle and other routes.</string>
+    <string name="nautical_render_descr">Nautical navigation. Buoys, lighthouses, riverways, sea lanes and marks, harbours, seamark services and depth contours.</string>
+    <string name="ski_map_render_descr">Skiing. Pistes, ski-lifts and other ski features. Less distracting secondary map objects.</string>
+    <string name="light_rs_render_descr">Simple driving. Gentle night mode. Contour lines, contrasting orange styled roads, less distracting secondary map objects.</string>
+    <string name="topo_render_descr">Hiking, trekking and nature cycling. Readable outdoors. Contrasting roads and natural objects, different route types, advanced contour line options, extra details. Adjusting "Surface integrity" distinguishes road quality. No night mode.</string>
+    <string name="mapnik_render_descr">Old default \'Mapnik\'-style. Similar colors to \'Mapnik\'.</string>
+    <string name="touring_view_render_descr">Touring in high contrasting detail. All default options, and as much detail as possible, in particular roads, paths, and other ways to travel. Clear \"touring atlas\" distinction between road types.</string>
+    <string name="default_render_descr">Dense cities cleanly. Contour lines, routes, surface quality, access restrictions, road shields, paths rendering according to SAC scale, whitewater sport features.</string>
     <string name="open_wikipedia_link_online">Open Wikipedia link online</string>
     <string name="open_wikipedia_link_online_description">The link will be opened in a web browser.</string>
     <string name="read_wikipedia_offline_description">Get OsmAnd Live subscription to read Wikipedia and Wikivoyage articles offline.</string>
